...
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_recycler_view">

        <EditText
            android:id="@+id/enter_comment_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_new_comment_text"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_comment_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.05"
            android:text="@string/send_text"
...
